	PR libfortran/24432 	* c99_protos.h: Define HAVE_ macros for all provided functions.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105597 138bc75d-0d04-0410-961f-82ee72b054a4